[gd_scene load_steps=6 format=3 uid="uid://ba8jwhijg15ls"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_2otne"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m0y3p"]
bg_color = Color(0.122252, 0.122252, 0.122252, 1)

[sub_resource type="Theme" id="Theme_2eprm"]
Panel/styles/panel = SubResource("StyleBoxFlat_m0y3p")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d3k13"]

[sub_resource type="Theme" id="Theme_sk50n"]
Button/styles/normal = SubResource("StyleBoxFlat_d3k13")

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2otne")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -68.0
offset_right = 90.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="Settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings
"

[node name="Credits" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Credits" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="Panel" parent="Credits"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 456.0
offset_top = 226.0
offset_right = 658.0
offset_bottom = 377.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_2eprm")

[node name="HBoxContainer" type="HBoxContainer" parent="Credits/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.5
offset_top = -20.0
offset_right = 100.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Credits/Panel/HBoxContainer"]
layout_mode = 2
text = "Developed by yaaboivince"

[node name="CloseCredits" type="Button" parent="Credits"]
layout_mode = 0
offset_left = 679.0
offset_top = 227.0
offset_right = 697.0
offset_bottom = 245.0
theme = SubResource("Theme_sk50n")

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Credits/CloseCredits" to="." method="_on_close_credits_pressed"]
